- "propagating/orbitalfixing/symcomptiming" to change the timining of symmetry computation for orbital fixing
- "propagating/orbitalfixing/performpresolving" that enables orbital fixing in presolving
- "presolving/symbreak/addconsstiming" to change the timining of symmetry computation for symmetry handling inequalities

deleted and modified parameters:
- removed parameter "heuristics/alns/stallnodefactor" as the stall nodes are now controlled
  directly by the target node limit within the heuristic
- removed parameter "presolving/symmetry/computepresolved" since this presolver does not compute symmetries independent
  of other components anymore

deleted files:
- presol_implfree removed

misc:
- updated CppAD to version 20180000.0
- add statistic that presents the number of resolves for instable LPs


SCIP version 5.0.2
=================

performance improvements:
- deactivate gauge cuts

fixed bugs:
- suppress debug solution warnings during problem creation stage
- fixed check for activated debugging solution in components constraint handler
- fixed potential bug concerning solution linking to LP in SCIPperformGenericDivingAlgorithm()
- fixed reward computation in ALNS on continuous, especially nonlinear, problems
- fixed bug in freeing reoptimization data if problem was solved during presolving
- fixed check of timing in heur_completesol
- fixed wrong propagation in optcumulative constraint handler
- fixed non-deterministic behavior in OBBT propagator
- don't disable LP presolving when using Xpress as LP solver
- fixed possible NULL pointer usage in cons_pseudoboolean
- ensured that SCIPgetDualbound() returns global dual bound instead of the dual bound of the remaining search tree
- fixed rare division-by-zero when solving bivariate quadratic interval equation
- use total memory for triggering memory saving mode
- fix parsing of version number in the CMake module for Ipopt